# Finance

./: .gitignore  README.md  docker-compose.yml
backend/: .coverage.json  .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_categories_table.py  002_create_transactions_table.py  003_create_groups_and_memberships_tables.py  dad31bef6600_create_users_and_refresh_tokens_tables.py
backend/src/: main.py
backend/src/features/auth/: model.py  repository.py  router.py  schemas.py  service.py
backend/src/features/categories/: model.py  repository.py  router.py  schemas.py  service.py
backend/src/features/dashboard/: router.py  service.py
backend/src/features/groups/: model.py  repository.py  router.py  schemas.py  service.py
backend/src/features/transactions/: model.py  repository.py  router.py  schemas.py  service.py
backend/src/shared/: config.py  database.py  dependencies.py  exceptions.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_login.py  test_auth_logout.py  test_auth_me.py  test_auth_refresh.py  test_auth_register.py  test_smoke.py
backend/tests/unit/auth/: test_auth_service.py  test_refresh_token_repository.py  test_schemas.py  test_user_model.py  test_user_repository.py
backend/tests/unit/categories/: test_category_model.py  test_category_repository.py  test_category_service.py
backend/tests/unit/dashboard/: test_dashboard_service.py
backend/tests/unit/groups/: test_group_model.py  test_group_repository.py  test_group_service.py
frontend/: README.md  (+7 more)
(+52 files in other folders)
